# python-cookiecutter

./: LICENSE  README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: .gitignore  LICENSE  README.md  pyproject.toml
